Fix vectorize pass going wrong with dot products (https://bugs.freedesktop.org/show_bug.cgi?id=75224)